Task manager list card and task list alignment fixed

--- a/client/src/components/taskManager/addtask.scss
+++ b/client/src/components/taskManager/addtask.scss
@@ -10,12 +10,16 @@
     }
 
     input {
-        padding: 5px;
+        margin-right: 2rem;
+        padding: 15px;
         width: 30rem;
         border: none;
         outline: none;
         background-color: whitesmoke;
-        border-radius: 5px;
+        border-radius: 10px;
 
+        button {
+            background-color: aqua;
+        }
     }
 }
