--- a/client/src/components/taskManager/listcard.scss
+++ b/client/src/components/taskManager/listcard.scss
@@ -1,17 +1,37 @@
+.menuCard {
+    :hover {
+        background-color: rgb(250, 250, 250);
+    }
+}
 .menu {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin: 1rem auto;
+    // box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin: 0 auto 0rem auto;
     width: 90%;
+    // border-radius: 10px;
+    padding: 1rem 1rem 1rem 3rem;
+    border-bottom: 1px solid rgb(220, 220, 220);
+    
 
     li {
-        padding: 1rem;
+        
         flex: 1;
+        z-index: 10;
 
         button {
-            margin: 5px;
+            margin-right: 5px;
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: large;        
+        }
+
+        .trash {
+            color: red;
+            
         }
     }
 
