--- a/client/src/components/taskManager/tasklist.scss
+++ b/client/src/components/taskManager/tasklist.scss
@@ -1,12 +1,13 @@
 .list-header {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     margin: 0 auto;
     width: 90%;
-    background-color: red;
-    padding: 1rem;
+    background-color: #FE4066;
+    padding: 1rem 1rem 1rem 3rem;
     color: white;
+    border-radius: 10px;
 
     li {
         flex: 1;
